adjust the api of service bindings
